# sonos-local-controller

./: .gitignore  Cargo.toml  README.md  debug_events.rs  debug_parser.rs  debug_volume_parsing.rs  debug_xml_parsing.rs  log.txt  mockup.txt  temp_decode_test  test_serde.rs  test_speaker_command.rs  test_state_cache_updates.rs  zone-group-state.txt
sonos/: Cargo.toml  Makefile  problematic_xml_1761412299.xml  problematic_xml_1761412855.xml
sonos/docs/: api-reference.md  ui-integration.md
sonos/examples/: README.md  builder-demo.rs  callback-test.rs  comprehensive-test.rs  debug-state-monitor.rs  event-processing-demo.rs  http-test.rs  log_event.rs  manual-notify.rs  multi-speaker-test.rs  parser_usage.rs  simple-state-monitor.rs  sonos-rs-demo.rs  state-init.rs  state-monitor.rs  stream-all-speakers.rs  streaming-debug.rs  streaming-events.rs  test-connection.rs  ui-integration-demo.rs
sonos/src/: client.rs  command.rs  discover.rs  error.rs  group.rs  groups.rs  lib.rs  model.rs  models.rs  speaker.rs  state.rs  stream.rs  system.rs  topology.rs  xml_decode.rs
sonos/test_data/: rendering_control_decoded.xml  rendering_control_sample.xml
sonos/tests/: README.md  builder_pattern.rs  callback_server.rs  discovery.rs  error_isolation_integration.rs  error_isolation_test.rs  event_processing_integration.rs  event_stream.rs  mod.rs  non_blocking_event_processing.rs  non_blocking_integration_test.rs  soap.rs  speaker_info_tests.rs  state.rs  subscription_management.rs  topology_integration_tests.rs  zone_group_topology_integration.rs  (+2 more)
sonos_legacy/: Cargo.toml
(+163 files in other folders)
