[package]
name = "sonos"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }

# Custom test configurations
[[test]]
name = "discovery"
path = "tests/discovery.rs"

[[test]]
name = "soap"  
path = "tests/soap.rs"

# Examples
[[example]]
name = "state-monitor"
path = "examples/state-monitor.rs"
